--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -149,6 +149,21 @@
 <!-- КОНЕЦ ГЛОБАЛЬНОГО МОДАЛЬНОГО ОКНА -->
 </div>
 
+<!-- ОБУЧЕНИЕ -->
+<section class="edu" id="eduWindow">
+<div class="edu__content" id="eduContent">
+  <img class="edu__img" src="/static/redesign/img/Ann.png" alt="">
+  <img class="edu__rewardImg" id="eduRewardImg">
+  <p class="edu__text" id="eduText"></p>
+  <div class="edu__btns">
+	<button class="edu__btn" id="eduPrevBtn">Назад</button>
+	<button class="edu__btn" id="eduNextBtn">Дальше</button>
+  </div>
+  <button class="edu__dont" id="eduDont">Не показывать обучение</button>
+</div>
+</section>
+
+
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>-->
 <script src="{% static 'redesign/js/header.js' %}?{{ csrf_token }}"></script>
 <script src="{% static 'redesign/js/status.js' %}?{{ csrf_token }}"></script>
