--- a/player/templates/player/redesign/overview_skills.html
+++ b/player/templates/player/redesign/overview_skills.html
@@ -44,7 +44,7 @@
         {% endif %}
     </p>
   </div>
-  <button class="overview__love-stat-learn" {% if not train or premium and has_slot  %} onclick="up_skill('power')" {% else %} disabled {% endif %} style="cursor: pointer">
+  <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('power')" {% else %} disabled {% endif %} style="cursor: pointer">
     {% if train %}
         {% if premium %}
             {% if has_slot %}
@@ -93,7 +93,7 @@
         {% endif %}
     </p>
   </div>
-  <button class="overview__love-stat-learn" {% if not train or premium and has_slot  %} onclick="up_skill('knowledge')" {% else %} disabled {% endif %} style="cursor: pointer">
+  <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('knowledge')" {% else %} disabled {% endif %} style="cursor: pointer">
     {% if train %}
         {% if premium %}
             {% if has_slot %}
@@ -142,7 +142,7 @@
         {% endif %}
     </p>
   </div>
-  <button class="overview__love-stat-learn" {% if not train or premium and has_slot  %} onclick="up_skill('endurance')" {% else %} disabled {% endif %} style="cursor: pointer">
+  <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('endurance')" {% else %} disabled {% endif %} style="cursor: pointer">
     {% if train %}
         {% if premium %}
             {% if has_slot %}
