--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -5386,6 +5386,12 @@ padding-right: 6rem;
   font-weight: 400;
 }
 
+.tableMobileModal h2 img{
+  display: block;
+  width: 34rem;
+  height: 34rem;
+}
+
 .tableMobileModal a {
   color: var(--c10two);
   display: block;
@@ -6813,6 +6819,154 @@ padding-right: 6rem;
   }
 }
 
+/*! edu */
+
+.edu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 14rem;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  color: var(--c10one);
+}
+
+.edu.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.edu__content {
+  position: absolute;
+  bottom: 60rem;
+  left: 0;
+  width: 100%;
+  height: max-content;
+  padding: 18rem;
+  padding-top: 62rem;
+  background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(0,0,0,0.75));
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+
+.edu__content.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.edu__img {
+  position: absolute;
+  top: -50rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100rem;
+  height: 100rem;
+  border: solid 2rem var(--c10two);
+}
+
+.edu__text {
+  margin: 0;
+  margin-bottom: 12rem;
+  line-height: 1.3;
+}
+
+.edu__btns {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 12rem;
+  margin-bottom: 12rem;
+}
+
+.edu__btn {
+  flex-grow: 1;
+  border: 0;
+  background-color: var(--c10two);
+  color: var(--c60);
+  line-height: 30rem;
+  text-align: center;
+  padding: 0;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+
+.edu__btn.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.edu__rewardImg {
+  margin: 0 auto;
+  margin-bottom: 12rem;
+  width: 60rem;
+  height: 60rem;
+}
+
+.edu__dont {
+  display: block;
+  width: 100%;
+  text-decoration: underline;
+  color: var(--c10two);
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.edu__glow {
+  position: absolute;
+  cursor: pointer;
+  animation: edu-glow 0.75s ease-in-out infinite both !important;
+}
+
+.edu__glow.click::after {
+  position: absolute;
+  right: -4rem;
+  bottom: -10rem;
+  display: block;
+  width: 30rem;
+  height: 30rem;
+  content: '';
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-image: url('/static/redesign/img/click.gif');
+}
+
+.edu-glow {
+  animation: edu-glow 0.75s ease-in-out infinite both !important;
+}
+
+@keyframes edu-glow {
+  0% { box-shadow: 0 0 5rem 0 var(--c10one); }
+  50% { box-shadow: 0 0 10rem 0 var(--c10one); }
+  100% { box-shadow: 0 0 5rem 0 var(--c10one); }
+}
+
+@media (min-width: 1000px) {
+  .edu {
+    z-index: 9999;
+  }
+  .edu__content {
+    left: 50%;
+    bottom: initial;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 600rem;
+  }
+}
+
 /*! ct__two-select-wrapper */
 
 .ct__two-select-wrapper {
@@ -8177,10 +8331,34 @@ padding-right: 6rem;
 }
 
 .m-sett__form {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: var(--c30);
+  padding: 24rem;
+}
+
+.m-sett__form::before,
+.m-sett__form::after {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  display: block;
+  width: 12rem;
+  height: 12rem;
+  content: '';
+  background-color: var(--c60);
+  clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
+}
+
+.m-sett__form::after {
+  top: initial;
+  left: initial;
+  right: -1px;
+  bottom: -1px;
+  transform: scale(-1);
 }
 
 .m-sett__form-label {
