--- a/player/templates/player/redesign/menu.html
+++ b/player/templates/player/redesign/menu.html
@@ -30,7 +30,7 @@
 				{% endif %}
 			</button>
 		</li>
-		<li class="nav__item">
+		<li class="nav__item eduBlockMining">
 			<a href="/mining" class="nav__link icon-main">
 				<span>{% trans 'добыча' context "menu" %}</span>
 				<div class="nav__svg-wrapper">
