--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -89,7 +89,7 @@
             </svg>
             <span>{% trans 'склад' context "storage" %}</span>
         </button>
-        <button class="ct__top-tab ct__top-tab2 ct__mid-btn">
+        <button class="ct__top-tab ct__top-tab2 ct__mid-btn eduBlock4">
             <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_259_318" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
                 <path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z"/>
@@ -121,14 +121,14 @@
 						{{ player.bottles }} <!--значение количества энергетиков-->
 						</label>
 					</h2>
-					<form method="POST" id="produce_energy_form" enctype="multipart/form-data" class="store__right-block">
+					<form method="POST" id="produce_energy_form" enctype="multipart/form-data" class="store__right-block eduBlock5">
 						{% csrf_token %}
 						<span>{% trans 'создать' context "storage_assets" %}:</span>
 						<label>
 						<input type="number" {% localize off %}min="{% if player.gold == 0 %}0{% else %}10{% endif %}" max="{{ player.gold|get_mul:10 }}"{% endlocalize %} step="10" name="energy_field" id="energy_field">
 						</label>
 						<span>{% trans 'стоимость' context "storage_assets" %}:
-							<i id="gold_cost">100</i> <!--значение стоимость-->
+							<i>G</i> <i id="gold_cost">100></i> <!--значение стоимость-->
 						</span>
 						<input type="range" id="energy_range" {% localize off %}min="{% if player.gold == 0 %}0{% else %}10{% endif %}" max="{{ player.gold|get_mul:10 }}"{% endlocalize %} step="10">
 						<button class="store__create-btn ct__mid-btn">
@@ -152,7 +152,7 @@
 					<div class="store__wp-wrapper">
 						<h2>WILD PASS</h2>
 						<picture>
-							<img src="{% static 'img/wild_pass.svg' %}" alt="wild_pass">
+							<img src="{% static 'img/wild_pass.svg' %}" alt="wild_pass" class="eduBlock6">
 						</picture>
 						<div class="store__wp-wrapper-r">
 							<span>{% trans 'Количество' context "storage_assets" %}: <label id="wp_count">{{ player.cards_count }}</label></span>
@@ -348,11 +348,14 @@
 		openModalBtn: document.getElementById('store__modal1-open'),
 		closeModalBtn: document.getElementById('store__modal1-close'),
 	})
-	const storeModal2 = new ModalOpenClose({
-		main: document.getElementById('store__modal2'),
-		openModalBtn: document.getElementById('store__modal2-open'),
-		closeModalBtn: document.getElementById('store__modal2-close'),
-	})
+
+	if (document.getElementById("store__modal2") != undefined){
+		const storeModal2 = new ModalOpenClose({
+			main: document.getElementById('store__modal2'),
+			openModalBtn: document.getElementById('store__modal2-open'),
+			closeModalBtn: document.getElementById('store__modal2-close'),
+		})
+	}
 
 	{% if can_upgrade %}
 
@@ -377,5 +380,134 @@
     };
 
 	{% endif %}
+</script>
+
+{% if not player.educated %}
+<script src="/static/redesign/js/education.js"></script>
+{% endif %}
+
+<script>
+    var check_edu = true;
+
+    {% if not player.educated %}
+    check_edu = false;
+
+     function getFromLS(){
+        return localStorage.getItem('edu_assistant');
+      }
+
+    var assist_img = this.getFromLS() ?? "/static/redesign/img/Ann.png";
+
+    document.getElementsByClassName('edu__img')[0].src = assist_img;
+
+    function claim_reward(id){
+      var data = "&csrfmiddlewaretoken=" + csrftoken + "&edu_id=" + id;
+      $.ajax({
+          beforeSend: function() {},
+          type: "POST",
+          url: "/claim_reward/",
+          data: data,
+          cache: false,
+          success: function(result){
+              if (result.response == 'ok'){
+                  actualize();
+              }
+          }
+      });
+    }
+
+    function edu_pragma(page) {
+        if (page == 11){
+            claim_reward('edu_04');
+        }
+        if (page == 99){
+            window.location.href = "/map";
+        }
+    }
+
+    const edu = new Educator({
+    onEduStart: () => { console.log('[EDU]: Started') },
+    onEduEnd: () => { console.log('[EDU]: Ended'); edu_pragma(99) },
+    onEduPageChange: (num) => { console.log(`[EDU]: Current page is ${num}`); edu_pragma(num) },
+    onCloseEdu: () => { console.log(`[EDU]: Education closed`); claim_reward('edu_00'); },
+    pages: [
+        {
+        text: 'Это ваш склад. Таких Складов у вас может быть много, но этот - ваш первый.',
+        },
+		{
+        text: 'Он состоит из двух крупных разделов - непосредственно Склада и защищённого Хранилища, которое всегда у вас под рукой.',
+        },
+		{
+        text: 'У вас даже может не быть Склада в регионе вашего местонахождения, но Хранилище - будет всегда.',
+        },
+		{
+        text: 'Для начала же, посмотрим на запасы Склада. Они поделены на три размера:',
+		awaitedDomElemClass: 'eduBlock2',
+        onlyGlowing: true,
+        },
+		{
+        text: '- большой объём, который позволяет хранить вам необработанное сырьё',
+        },
+		{
+        text: '- средний объём, хранящий, в основном, материалы и некоторые товары',
+        },
+		{
+        text: '- малый объём, занимаемый, в основном, оружием.',
+        },
+		{
+        text: 'Вам ничего не мешает занять весь малый объём только танками, к примеру. А в большом объёме же у Вас хранятся те ресурсы, что вы распорядились добыть.',
+        },
+		{
+        text: 'Когда Вы приметесь торговать, то обратите внимание, что та часть запасов, что Вы захотели продать, со Склада не пропадает до тех пор, пока их не купят. Поэтому, распоряжайтесь объёмом своих Складов с умом.',
+        },
+		{
+        text: 'Помимо запасов, на Склад можно выложить Наличные, которыми будут оплачиваться производство заказанных вами товаров.',
+		awaitedDomElemClass: 'eduBlock3',
+        onlyGlowing: true,
+        },
+		{
+        text: 'Чтобы выложить Наличные, вам потребуется прилететь в регион Склада, и указать сумму, которая должна остаться здесь.',
+        },
+		  {
+			text: 'Награда: 200 золота',
+			rewardImgUrl: '/static/redesign/img/200_gold.png',
+		  },
+		{
+        text: 'Ладно, это скучно - глядеть на булыжники и нефтяную жижу. Давайте посмотрим на действительно ценные вещи!',
+		awaitedDomElemClass: 'eduBlock4',
+        onlyMobileInteractive: true,
+        },
+		{
+        text: 'Помните Энергетики, которые я Вам давала? Они лежат именно здесь. В тёмном, прохладном месте. Здесь же, мы можем заказать производство новых, расходуя Золото.',
+		awaitedDomElemClass: 'eduBlock5',
+        onlyGlowing: true,
+        },
+		{
+        text: 'Так же, в Хранилище находятся Wild Pass. Это карты премиум-доступа.',
+		awaitedDomElemClass: 'eduBlock6',
+        onlyGlowing: true,
+        },
+		{
+        text: 'При их активации, вы получите возможности, позволяющие облегчить улучшение ваших харатеристик, а также упростить организацию работ на рудниках и заводах.',
+        },
+		{
+        text: 'Этими предметами можно свободно торговать - они всегда высоко ценятся, и прочие политики готовы платить за них крупные суммы денег.',
+        },
+		{
+        text: 'Раздел "Склад" позволяет Вам управлять тем Складом, который находится в регионе вашего местоположения.',
+        },
+		{
+        text: 'Но, обратите внимание - в других регионах Склада у Вас ещё нет. Поэтому, его потребуется построить там.',
+        },
+		{
+        text: 'Список всех Складов доступен в разделе "Активы". Там же, вы сможете организовать перевозку своих товаров, из одного региона в другой.',
+        },
+		{
+        text: 'Всё это время, мы с Вами решали задачи, которые были ограничены одним регионом. Теперь же, давайте посмотрим на мир шире!',
+        },
+    ]
+  })
+
+  {% endif %}
 </script>
 {% endblock %}
