--- a/storage/templates/storage/redesign/storage_blocks/has_storage.html
+++ b/storage/templates/storage/redesign/storage_blocks/has_storage.html
@@ -41,7 +41,7 @@
                 {{ player.cash|get_sum:storage.cash }}
                 </p> <!--значение "всего денег"-->
             </p>
-            <svg width="314" height="100" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="eduBlock3" width="314" height="100" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2.46447 11.5355L11.5355 2.46447C12.4732 1.52678 13.745 1 15.0711 1H308C310.761 1 313 3.23857 313 6V94C313 96.7614 310.761 99 308 99H6C3.23858 99 1 96.7614 1 94V15.0711C1 13.745 1.52678 12.4732 2.46447 11.5355Z" fill="var(--c30)" stroke="var(--c30)"/>
             </svg>
         </form>
@@ -50,7 +50,7 @@
         <!-- ['small', 'medium', 'large'] -->
         {% for size in size_dict|get_key_list %}
         {% if goods_dict|has_key:size %}
-        <li class="store__item" {% if forloop.counter0 != 0 %}style="margin-top: 2vh"{% endif %}><!--шапка типоразмера-->
+        <li class="store__item eduBlock2" {% if forloop.counter0 != 0 %}style="margin-top: 2vh"{% endif %}><!--шапка типоразмера-->
             {% with cap_name=size|get_sum:'_cap' %}
             <p>{{ size_dict|dict_key:size }} объём</p>
             <span>
