--- a/party/templates/party/redesign/party.html
+++ b/party/templates/party/redesign/party.html
@@ -108,7 +108,7 @@
 
 
 {% if not player.educated %}
-<script src="/static/redesign/js/education.js"></script>
+<script src="/static/redesign/js/education_n.js"></script>
 {% endif %}
 
 <script>
@@ -142,11 +142,8 @@
     }
 
     function edu_pragma(page) {
-        if (page == 88){
-            claim_reward('edu_05');
-        }
-        if (page == 99){
-            window.location.href = "/party";
+        if (page == 2){
+            claim_reward('edu_00');
         }
     }
 
@@ -158,14 +155,14 @@
     {% if has_open %}
     pages: [
         {
-        text: 'Вам доступен общий список партий со всего света, чтобы вы могли выбрать ту, что больше всего вам подходит.',
+        text: 'Вам доступен общий список партий со всего света, чтобы Вы могли выбрать ту, что больше всего Вам подходит.',
         },
         {
         text: 'В свою очередь, рекомендую присмотреться к крупным коллективам - обычно, они предоставляют наиболее выгодные условия новым участникам.',
 		awaitedDomElemClass: 'eduBlock1',
         },
 		{
-        text: 'Выберите любую партию, и нажмите "вступить". После чего, рекомендую связаться с её главой. А я же свяжусь с вами позже. Благодарю за внимание!',
+        text: 'Выберите любую партию, и нажмите "вступить". После чего, рекомендую связаться с её главой. А я же свяжусь с Вами позже. Благодарю за внимание!',
         awaitedDomElemClass: 'eduBlock2',
         },
 		{
