--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -8,7 +8,7 @@
 
 {% block for_scripts_and_css %}
 {% if not player.educated %}
-<script src="/static/redesign/js/education.js"></script>
+<script src="/static/redesign/js/education_n.js"></script>
 {% endif %}
 
 <script>
@@ -111,7 +111,7 @@
         onlyGlowing: true,
       },
       {
-        text: 'Сейчас Вы находитесь в {% if player.region.state %}государстве {{ player.region.state.title }}, которому принадлежит регион {{ player.region.region_name }}{% else %}независимом регионе{% endif %}. Здесь представлена различная информация о регионе нашего местанахождения, а также мире в целом',
+        text: 'Сейчас Вы находитесь в {% if player.region.state %}государстве {{ player.region.state.title }}, которому принадлежит регион {{ player.region.region_name }}{% else %}независимом регионе{% endif %}. Здесь представлена различная информация о регионе нашего местонахождения, а также мире в целом',
         awaitedDomElemClass: 'eduBlock2',
         onlyGlowing: true,
       },
@@ -119,7 +119,7 @@
         text: 'В любом регионе государства можно основать партию, либо присоединиться к одной из уже существующих. Некоторые из них, по итогам выборов, проходят в Парламенты своих стран. Вы обязательно подберёте партию по душе - но чуть позже.',
       },
       {
-        text: 'А сейчас обратите внимание на ваши харатеристики. Их рекомендуется развивать постоянно, при наличии свободных средств.',
+        text: 'А сейчас обратите внимание на ваши характеристики. Их рекомендуется развивать постоянно, при наличии свободных средств.',
         awaitedDomElemClass: 'eduBlock3',
       },
       {
