--- a/region/templates/region/redesign/map.html
+++ b/region/templates/region/redesign/map.html
@@ -335,7 +335,7 @@
 <!-- костыльный блок: тексты всех имен регионов -->
 
 {% if not player.educated %}
-<script src="/static/redesign/js/education.js"></script>
+<script src="/static/redesign/js/education_n.js"></script>
 {% endif %}
 
 <script>
@@ -390,20 +390,20 @@
         text: 'Каждый регион может быть независимым, быть столицей государства, либо же принадлежать государству на правах провинции.',
         },
         {
-        text: 'Нажав на любую территорию, вы откроете небольшое окно с информацией о ней.',
+        text: 'Нажав на любую территорию, Вы откроете небольшое окно с информацией о ней.',
         },
         {
-        text: 'Краткая информация о регионе позволит вам узнать его название и владельца, а также проверить, есть ли там запасы сырья.',
+        text: 'Краткая информация о регионе позволит Вам узнать его название и владельца, а также проверить, есть ли там запасы сырья.',
         },
         {
-        text: 'Для перемещения здесь же доступна кнопка вызова вашего личного самолёта. Вам потребуется лишь оплатить затраты на топливо, подождать совсем немного - и вот вы уже на другом конце мира!',
+        text: 'Для перемещения здесь же доступна кнопка вызова Вашего личного самолёта. Вам потребуется лишь оплатить затраты на топливо, подождать совсем немного - и вот вы уже на другом конце мира!',
         },
         {
         text: 'Награда: 200 золота',
         rewardImgUrl: '/static/redesign/img/200_gold.png',
         },
         {
-        text: 'Чтобы начать путь к покорению всех этих территорий, нам потребуются союзники. Позвольте помочь выбрать вам партию, хотя бы на первое время.',
+        text: 'Чтобы начать путь к покорению всех этих территорий, нам потребуются союзники. Позвольте помочь выбрать Вам партию, хотя бы на первое время.',
         },
     ]
   })
