--- a/region/templates/region/redesign/mining.html
+++ b/region/templates/region/redesign/mining.html
@@ -135,7 +135,7 @@
 <script src='{% static "js/mining.js" %}?{{ csrf_token }}'></script>
 
 {% if not player.educated %}
-<script src="/static/redesign/js/education.js"></script>
+<script src="/static/redesign/js/education_n.js"></script>
 {% endif %}
 
 {% if premium %}
@@ -197,7 +197,7 @@
         text: 'Организация работ потребует затрат Ваших сил, выраженных в Энергии, но, взамен гарантирует поток Финансирования.',
         },
         {
-        text: 'Обратите внимание, что золото мы добываем по личной инициативе, поэтому, инвесторы не будут оплачивать Вам эти работы.',
+        text: 'Обратите внимание, что золото мы добываем по личной инициативе, поэтому инвесторы не будут оплачивать Вам эти работы.',
         },
         {
         text: 'Давайте попробуем выбить часть Финансирования из них прямо сейчас, организовав добычу сырья.',
@@ -212,7 +212,7 @@
         rewardImgUrl: '/static/redesign/img/200_gold.png',
         },
         {
-        text: 'Я стараюсь, чтобы ваше расписание не было загружено слишком сильно. Благодаря этому, вы можете постепенно восстановить Энергию естественным путём.',
+        text: 'Я стараюсь, чтобы Ваше расписание не было загружено слишком сильно. Благодаря этому, вы можете постепенно восстановить Энергию естественным путём.',
         awaitedDomElemClass: 'eduBlockMining3',
         onlyGlowing: true,
         },
@@ -220,7 +220,7 @@
         text: 'Но иногда, обстоятельства требуют от нас вложения дополнительных сил. На этот случай у нас есть Энергетики.',
         },
         {
-        text: 'Энергетики - ценный ресурс, получаемый за Золото, которое мы с вами добываем. Они позволяют восполнять запасы Энергии без ожидания.',
+        text: 'Энергетики - ценный ресурс, получаемый за Золото, которое мы с Вами добываем. Они позволяют восполнять запасы Энергии без ожидания.',
         },
         {
         text: 'Я как раз принесла вам баночку. Или вам перелить в более изящную ёмкость?',
@@ -231,7 +231,7 @@
         rewardImgUrl: '/static/redesign/img/200_gold.png',
         },
         {
-        text: 'Как ощущения? Снова полны сил? Тогда давайте организуем добычу сырья ещё раз, чтобы ваш заряд бодрости не пропал даром!',
+        text: 'Как ощущения? Снова полны сил? Тогда давайте организуем добычу сырья ещё раз, чтобы Ваш заряд бодрости не пропал даром!',
         awaitedDomElemClass: 'eduBlock1',
         },
         {
