--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -189,7 +189,7 @@
 		<div class="store__modal1-container">
 			<h2 class="store__modal1-title">{% trans 'Перемещение Склада' context "storage_transfer" %}</h2>
 			{% if war_there %}
-			<p>{% trans 'Нельзя вывезти Склад из региона боевых действий' context "storage_transfer" %}</p>
+			<p>{% trans 'Нельзя Вывезти Склад из региона боеВых действий' context "storage_transfer" %}</p>
 			{% else %}
 			<p>{% trans 'Вы можете перенести Склад в регион текущего местоположения (один раз)' context "storage_transfer" %}</p>
 			<button class="store__modal1-btn ct__mid-btn" onclick="move_storage(event, {% localize off %}{{ single_storage.pk }}{% endlocalize %})">
@@ -383,7 +383,7 @@
 </script>
 
 {% if not player.educated %}
-<script src="/static/redesign/js/education.js"></script>
+<script src="/static/redesign/js/education_n.js"></script>
 {% endif %}
 
 <script>
@@ -432,13 +432,13 @@
     onCloseEdu: () => { console.log(`[EDU]: Education closed`); claim_reward('edu_00'); },
     pages: [
         {
-        text: 'Это ваш склад. Таких Складов у вас может быть много, но этот - ваш первый.',
+        text: 'Это Ваш cклад. Таких Складов у Вас может быть много, но этот - Ваш первый.',
         },
 		{
-        text: 'Он состоит из двух крупных разделов - непосредственно Склада и защищённого Хранилища, которое всегда у вас под рукой.',
+        text: 'Он состоит из двух крупных разделов - непосредственно Склада и защищённого Хранилища, которое всегда у Вас под рукой.',
         },
 		{
-        text: 'У вас даже может не быть Склада в регионе вашего местонахождения, но Хранилище - будет всегда.',
+        text: 'У Вас даже может не быть Склада в регионе Вашего местонахождения, но Хранилище - будет всегда.',
         },
 		{
         text: 'Для начала же, посмотрим на запасы Склада. Они поделены на три размера:',
@@ -446,7 +446,7 @@
         onlyGlowing: true,
         },
 		{
-        text: '- большой объём, который позволяет хранить вам необработанное сырьё',
+        text: '- большой объём, который позволяет хранить Вам необработанное сырьё',
         },
 		{
         text: '- средний объём, хранящий, в основном, материалы и некоторые товары',
@@ -455,18 +455,18 @@
         text: '- малый объём, занимаемый, в основном, оружием.',
         },
 		{
-        text: 'Вам ничего не мешает занять весь малый объём только танками, к примеру. А в большом объёме же у Вас хранятся те ресурсы, что вы распорядились добыть.',
+        text: 'Вам ничего не мешает занять весь малый объём только танками, к примеру. А в большом объёме же у Вас хранятся те ресурсы, что Вы распорядились добыть.',
         },
 		{
         text: 'Когда Вы приметесь торговать, то обратите внимание, что та часть запасов, что Вы захотели продать, со Склада не пропадает до тех пор, пока их не купят. Поэтому, распоряжайтесь объёмом своих Складов с умом.',
         },
 		{
-        text: 'Помимо запасов, на Склад можно выложить Наличные, которыми будут оплачиваться производство заказанных вами товаров.',
+        text: 'Помимо запасов, на Склад можно Выложить Наличные, которыми будут оплачиваться производство заказанных Вами товаров.',
 		awaitedDomElemClass: 'eduBlock3',
         onlyGlowing: true,
         },
 		{
-        text: 'Чтобы выложить Наличные, вам потребуется прилететь в регион Склада, и указать сумму, которая должна остаться здесь.',
+        text: 'Чтобы выложить Наличные, Вам потребуется прилететь в регион Склада, и указать сумму, которая должна остаться здесь.',
         },
 		  {
 			text: 'Награда: 200 золота',
@@ -488,19 +488,19 @@
         onlyGlowing: true,
         },
 		{
-        text: 'При их активации, вы получите возможности, позволяющие облегчить улучшение ваших харатеристик, а также упростить организацию работ на рудниках и заводах.',
+        text: 'При их активации, Вы получите возможности, позволяющие облегчить улучшение Ваших характеристик, а также упростить организацию работ на рудниках и заводах.',
         },
 		{
         text: 'Этими предметами можно свободно торговать - они всегда высоко ценятся, и прочие политики готовы платить за них крупные суммы денег.',
         },
 		{
-        text: 'Раздел "Склад" позволяет Вам управлять тем Складом, который находится в регионе вашего местоположения.',
+        text: 'Раздел "Склад" позволяет Вам управлять тем Складом, который находится в регионе Вашего местоположения.',
         },
 		{
         text: 'Но, обратите внимание - в других регионах Склада у Вас ещё нет. Поэтому, его потребуется построить там.',
         },
 		{
-        text: 'Список всех Складов доступен в разделе "Активы". Там же, вы сможете организовать перевозку своих товаров, из одного региона в другой.',
+        text: 'Список всех Складов доступен в разделе "Активы". Там же Вы сможете организовать перевозку своих товаров из одного региона в другой.',
         },
 		{
         text: 'Всё это время, мы с Вами решали задачи, которые были ограничены одним регионом. Теперь же, давайте посмотрим на мир шире!',
